# SegformerPlusPlus

./: README.md  cityscapes_demo.py  example_torchhub.py  hubconf.py
docs/run/: run_mmeng.md  run_mmpose.md  run_mmseg.md  run_noopenmmlab.md  token_merging.md
docs/setup/: mmeng_setup.md  mmpose_setup.md  mmseg_setup.md  noopenmmlab_setup.md  torchhub_setup.md
mmpose/: .gitignore  setup.py
mmpose/configs/_base_/: default_runtime.py
mmpose/requirements/: runtime.txt
mmsegmentation/: .gitignore  setup.py
mmsegmentation/requirements/: runtime.txt
model/: setup.py
model/segformer_plusplus/: build_model.py  start_random_benchmark.py
model_without_OpenMMLab/: pyproject.toml  setup.py
model_without_OpenMMLab/segformer_plusplus/: __init__.py  build_model.py  cityscape_benchmark.py  cityscapes_prediction_output.txt  random_benchmark.py  start_cityscape_benchmark.py
model_without_OpenMMLab/segformer_plusplus/Registry/: __init__.py  default_scope.py  registry.py
model_without_OpenMMLab/segformer_plusplus/configs/: segformer_mit_b0.py  segformer_mit_b2.py
model_without_OpenMMLab/segformer_plusplus/configs/config/: lazy.py  utils.py
model_without_OpenMMLab/segformer_plusplus/model/: utils.py  weight_init.py
model_without_OpenMMLab/segformer_plusplus/model/backbone/: __init__.py  mit.py
model_without_OpenMMLab/segformer_plusplus/model/head/: segformer_head.py
model_without_OpenMMLab/segformer_plusplus/utils/: benchmark.py  build_functions.py  embed.py  imagenet_weights.py  manager.py  version_utils.py  wrappers.py
(+53 files in other folders)
